spold update